datavalue_theme_15/public/scss/partials/_frappe.scss
/* ... */
.form-control.column-width {
  height: 18px !important;
  text-align: center !important;
}

.grid-body {
  .grid-static-col {
    .form-control {
      height: 28px !important;
      padding: 0 5px !important;
      font-size: 14px;
      font-weight: 700 !important;
    }
  }
}

.grid-body {
  .static-area.ellipsis {
    height: 28px;
    line-height: 23px;
  }
}

.grid-heading-row {
  color: var(--blue-800);
  font-weight: 700;
}

.form-section .section-head, .form-dashboard-section .section-head {
  background: var(--blue-100);
  border-radius: 7px;
  font-weight: 700;
  letter-spacing: 0;
  color: var(--blue-600);
  padding: 8px 15px;
}

.form-tabs-list {
  overflow: hidden;

  .form-tabs {
    background: var(--blue-100);
    margin: 5px;
    border-radius: 7px;
    padding: 0 5px;
    overflow: hidden;

    .nav-item .nav-link {
      background: transparent;
      border-bottom: 1px solid transparent;
      height: 30px;
      line-height: 30px;
      margin: 6px 3px;
      padding: 0px 8px;
      color: #6c7881;
      font-weight: 700;
      border-radius: 7px;
      transition: all 0.2s ease-in-out;

      &:hover {
        background: var(--blue-300);
        color: var(--blue-800);
      }

      &.active {
        background: var(--primary) !important;
        color: #ffffff !important;
        font-weight: 700;
        position: relative;
        transition: all 0.2s ease-in-out;
      }
    }
  }

  .btn-save-doc {
    position: absolute;
    right: 25px;
    top: 25px;
    z-index: 25;
  }
}

.modal .modal-header .modal-title {
  font-weight: 700;
  font-size: 18px;
}

.dropdown-item:hover, .dropdown-item:focus {
  background-color: var(--blue-100);
  color: var(--blue-700);
}

.dropdown-item.active, .dropdown-item:active {
  background-color: var(--blue-600);
  color: #ffffff;
}

.control-input {
  &[data-option="Email"], &[data-option="Phone"] {
    > input {
      padding-left: 28px;
    }

    &:before {
      width: 24px;
      height: 24px;
      position: absolute;
      left: 8px;
      top: 2px;
      z-index: 1;
      display: block;
      font-size: 16px;
      font-weight: 300;
      font-family: "Font Awesome 5 Pro", serif;
      color: #818d95;
      content: "";
    }
  }

  &[data-option="Email"] {
    &:before {
      content: "\f0e0";
    }
  }

  &[data-option="Phone"] {
    &:before {
      content: "\f879";
      font-size: 14px;
      top: 5px;
    }
  }
}

.frappe-control {
  &[data-fieldtype="_Currency"] {
    .control-input {
      position: relative;

      > input {
        padding-left: 28px;
      }

      &:before {
        width: 24px;
        height: 24px;
        position: absolute;
        left: 8px;
        top: 2px;
        z-index: 1;
        display: block;
        font-size: 16px;
        font-weight: 300;
        font-family: "Font Awesome 5 Pro", serif;
        color: #818d95;
        content: "\f2e8";
      }
    }
  }

  &[data-fieldtype="Date"], &[data-fieldtype="Time"] {
    .control-input {
      position: relative;

      > input {
        padding-left: 28px;
      }

      &:before {
        width: 24px;
        height: 24px;
        position: absolute;
        left: 8px;
        top: 2px;
        z-index: 1;
        display: block;
        font-size: 16px;
        font-weight: 300;
        font-family: "Font Awesome 5 Pro", serif;
        color: #818d95;
        content: "";
      }
    }
  }

  &[data-fieldtype="Date"] {
    .control-input {
      &:before {
        content: "\f073";
      }
    }
  }

  &[data-fieldtype="Time"] {
    .control-input {
      &:before {
        content: "\f017";
      }
    }
  }
}

.awesomplete > [role=listbox] {
  border-color: var(--primary);
  margin-top: 5px;
}

.awesomplete > [role=listbox] > li .link-option, .awesomplete > [role=listbox] > [role=option] .link-option {
  font-weight: 700;
  color: var(--primary);
}

.frappe-control[data-fieldtype="Link"] {
  .awesomplete > input {
    width: calc(100% - 38px);
  }

  .action-btn, .link-btn {
    right: 40px !important;
    top: 0 !important;
  }

  .link-btn-add {
    position: absolute;
    top: 0;
    right: 0;

    .btn.btn-primary {
      width: 30px;
      height: 28px;
      line-height: 28px;
      font-size: 16px;
      padding: 0;
    }
  }

  a.btn-open {
    background: var(--primary);
    height: 18px;
    line-height: 18px;
    display: inline-block;
    padding: 0 8px;
    font-size: 12px;
    color: #fff;
    border-radius: 4px;
    position: relative;
    top: 0;
    transition: all 0.2s ease-in-out;

    .icon {
      stroke: #ffffff
    }

    &:hover {
      background: var(--blue-700);
    }
  }

  a.btn-clear {
    background: var(--red-200);
    height: 18px;
    line-height: 18px;
    display: inline-block;
    padding: 0 8px;
    font-size: 12px;
    color: var(--red-600);
    border-radius: 4px;
    position: relative;
    top: 0;
    transition: all 0.2s ease-in-out;

    .icon {
      stroke: var(--danger)
    }

    &:hover {
      background: var(--red-300);
      color: var(--red-700);
    }
  }

  .no-add-btn {
    .action-btn, .link-btn {
      right: 8px !important;
    }

    > .awesomplete > input {
      width: 100%;
    }
  }
}

.awesomplete > [role=listbox] > li:hover, .awesomplete > [role=listbox] > li[aria-selected=true], .awesomplete > [role=listbox] > [role=option]:hover, .awesomplete > [role=listbox] > [role=option][aria-selected=true] {
  background-color: var(--awesomplete-hover-bg);
  color: var(--awesomplete-hover-color);
}

.frappe-control .action-btn, .frappe-control .link-btn {
  top: 0px;
  right: 8px;
}

.filter-field, .standard-filter-section {
  .frappe-control[data-fieldtype=Link] {
    .awesomplete > input {
      width: 100%;
    }

    .link-btn-add {
      display: none !important;
    }
  }
}
/* ... */

